# kpm

./: README.md  graphs.py  kpm-slurm.sh  kpm.pbs  kpm.py  kpm.sh  kpm_benchmark.py  parallel.py  propagation.py  pyproject.toml  read.py  setup.cfg  setup.py  setup.sh  setup.txt  simulation.ipynb  start_ray.sh
100K/evs/: 1.ev
10K/evs/: 1.ev  2.ev  3.ev  4.ev
10K/graphs/: 1.metis  2.metis  3.metis  4.metis
1K/evs/: 1.ev  1000.ev  1002.ev  1004.ev  1005.ev  1006.ev  1009.ev  101.ev  1021.ev  1024.ev  1027.ev  1028.ev  1029.ev  1030.ev  1031.ev  1032.ev  1035.ev  1038.ev  104.ev  1044.ev  1048.ev  1049.ev  1053.ev  1056.ev  1057.ev  106.ev  1060.ev  1066.ev  1067.ev  1072.ev  1073.ev  1078.ev  1080.ev  1090.ev  1092.ev  1094.ev  1095.ev  1096.ev  1097.ev  1098.ev  (+2158 more)
1K/graphs/: 10.metis  100.metis  1000.metis  1001.metis  1005.metis  101.metis  1011.metis  1012.metis  1014.metis  1015.metis  1017.metis  1022.metis  1024.metis  1027.metis  1031.metis  1032.metis  1033.metis  1035.metis  1036.metis  1037.metis  1039.metis  1040.metis  1041.metis  1042.metis  1043.metis  1045.metis  1046.metis  1048.metis  1051.metis  1054.metis  1055.metis  1059.metis  1065.metis  1066.metis  1068.metis  1069.metis  107.metis  1073.metis  1074.metis  1075.metis  (+2434 more)
1K_full_spectrum/eigenvalues/: 10.ev  100.ev  1001.ev  1003.ev  1007.ev  1008.ev  1010.ev  1011.ev  1012.ev  1013.ev  1014.ev  1015.ev  1016.ev  1017.ev  1018.ev  1019.ev  102.ev  1020.ev  1022.ev  1023.ev  1025.ev  (+2781 more)
hawk-benchmarks/: parse_benchmarks.py
kpm/: chebyshev.py  coefs.py  histogram.py  mpi.py  read.py  run.py
(+2557 files in other folders)
