[metadata]
name = kpm
version = 0.3
description = Estimate eigenvalue distribution of graphs
author = Sebastian Arming
license = GPLv3+
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
platforms = unix, linux, osx


[options]
packages =
    kpm
install_requires =
    scipy>=1.5.3
    numpy>=1.19.5
    mpi4py>=3.0.0.3
python_requires = >=3.6
zip_safe = no

[options.extras_require]
test =
    pytest
    pytest-cov
    mypy
dev =
    black
    ipython
    matplotlib
    profilehooks
    tox
    cython


[options.entry_points]
console_scripts =
    kpm = kpm.run:main